[metadata]
name = hive.py
description = Ethereum Hive Simulators Python Library
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
url = https://github.com/marioevz/hive.py
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: GPL3 License

[options]
packages =
    hive

package_dir =
    =src

python_requires = >=3.10

install_requires =
    certifi==2023.7.22
    charset-normalizer==3.2.0
    exceptiongroup==1.1.2
    idna==3.4
    iniconfig==2.0.0
    packaging==23.1
    pluggy>=1.3.0,<2.0.0
    requests==2.31.0
    tomli==2.0.1
    types-requests==2.31.0.2
    types-urllib3==1.26.25.14
    typing_extensions==4.7.1
    urllib3==2.0.4


[options.package_data]
hive =
    py.typed

[options.extras_require]
test =
    pytest==7.4.0
    pytest-cov>=4.1.0,<5
lint =
    mypy==1.4.1
    mypy-extensions==1.0.0