[metadata]
name = hive.py
description = Ethereum Hive Simulators Python Library
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
url = https://github.com/marioevz/hive.py
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: GPL3 License

[options]
packages =
    hive

package_dir =
    =src

python_requires = >=3.10

install_requires =
    requests>=2.31.0,<3

[options.package_data]
hive =
    py.typed

[options.extras_require]
test =
    pytest>=7.4.0,<8
    pytest-cov>=4.1.0,<5
lint =
    mypy>=1.4.1,<2
